[package]
name = "hachimi_cat"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["libhachimi", "hacat", "hacore"]

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
# tracing = "0.1.44"
ringbuf = "0.4.8"

rand = "0.9.2"
bytes = "1.11.0"

clap = { version = "4.5.53", features = ["derive"] }

opus = { version = "0.3.0", package = "opus" }
cpal = "0.17.0"
nnnoiseless = "0.5.2"
webrtc-audio-processing = { version = "0.5.0", features = ["bundled"] }
biquad = "0.5.0"

tokio = "1.48.0"
iroh = { version = "0.95.1", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }


[dependencies]
libhachimi = { path = "./libhachimi" }
anyhow = { workspace = true }
thiserror = { workspace = true }
# tracing = { workspace = true }
ringbuf = { workspace = true }

cpal = { workspace = true }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
