[package]
name = "hachimi_cat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hacat"

[[bin]]
name = "manbo"

[workspace]
members = ["hacore"]

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
# tracing = "0.1.44"
rtrb = "0.3.2"

rand = "0.9.2"
bytes = "1.11.0"

nnnoiseless = "0.5.2"

tokio = "1.48.0"
iroh = { version = "0.95.1", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
# tracing = { workspace = true }
rtrb = { workspace = true }

rand = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
iroh = { workspace = true }

hacore = { path = "hacore" }

clap = { version = "4.5.54", features = ["derive"] }
opus = "0.3.0"

[profile.release]
lto = "thin"
codegen-units = 1
# opt-level = 3
strip = true
