[package]
name = "hacat"
version = "0.1.0"
edition = "2024"

[dependencies]
hacore = { path = "../hacore" }
anyhow = { workspace = true }
thiserror = { workspace = true }
# tracing = { workspace = true }
ringbuf = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
cpal = { workspace = true }
opus = { workspace = true }
tokio = { workspace = true }
iroh = { workspace = true }
