[package]
name = "hacore"
version = "0.1.0"
edition = "2024"

[dependencies]
libhachimi = { path = "../libhachimi" }
# bytes = "1.11.0"
# rand = "0.9.2"
# uuid = { version = "1.19.0", features = ["v7", "serde", "fast-rng"] }
# chrono = { version = "0.4.42", features = ["serde"] }


# serde = { version = "1.0.228", features = ["derive"] }
# rmp-serde = "1.3.0"
# rusqlite = { version = "0.38.0", features = ["bundled"] }

# chacha20poly1305 = "0.10.1"
# zeroize = "1.8.2"

# uniffi = { version = "0.30.0", features = ["tokio"] }

# [build-dependencies]
# uniffi = { version = "0.30.0", features = ["build"] }
