[package]
name = "hacore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
rtrb = { workspace = true }
# ringbuf = { workspace = true }
nnnoiseless = { workspace = true }
tokio = { workspace = true }
webrtc-audio-processing = { version = "0.5.0", features = ["bundled"] }
cpal = "0.17.0"

[target.'cfg(target_vendor = "apple")'.dependencies]
coreaudio-rs = "0.13.0"
