[package]
name = "libhachimi"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
ringbuf = { workspace = true }
tokio = { workspace = true }
biquad = { workspace = true }
nnnoiseless = { workspace = true }
fdaf-aec = { git = "https://github.com/imlyzh/fdaf-aec" }
rustfft = "6.4.1"
num-complex = "0.4.6"
